--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="es"></html>
+<html lang="es">
+
+</html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Página Básica</title>
     <style>
         body {
@@ -12,16 +16,19 @@
             background-color: #f4f4f9;
             color: #333;
         }
+
         header {
             background-color: #6200ea;
             color: white;
             padding: 1rem 0;
             text-align: center;
         }
+
         main {
             padding: 2rem;
             text-align: center;
         }
+
         footer {
             background-color: #333;
             color: white;
@@ -33,15 +40,63 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Bienvenido a Mi Página Básica</h1>
     </header>
     <main>
         <p>Esta es una página HTML simple creada como ejemplo.</p>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <p>Columna 1: Contenido de ejemplo.</p>
+                </div>
+                <div class="col-md-4">
+                    <p>Columna 2: Contenido de ejemplo.</p>
+                </div>
+                <div class="col-md-4">
+                    <p>Columna 3: Contenido de ejemplo.</p>
+                </div>
+            </div>
+        </div>
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>@social</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <footer>
         <p>&copy; 2023 Mi Sitio Web</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
