--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-
+        //Apartado de tabla 
         <table class="table">
             <thead>
                 <tr>
